--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#faqs">FAQs</a>
                         </li>
-                        <li><button class="btn btn-danger">1200-345-123</button></li>
+                        <li><button class="main-btn">1200-345-123</button></li>
                     </ul>
                 </div>
             </div>
@@ -51,7 +51,90 @@
     </header>
 
     <!-- Section-1 top-banner -->
+    <section id="home">
+        <div class="container-fluid px-0 top-banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 col-md-6">
+                        <h1>Good food are good investment</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo saepe iusto doloremque.
+                        </p>
+                        <div class="mt-4">
+                            <button class="main-btn">Order now <i class="fas fa-shopping-basket ps-3"></i></button>
+                            <button class="white-btn mx-lg-4 mt-lg-0 mt-4">Order now <i
+                                    class="fas fa-angle-right ps-3"></i></button>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+
+        </div>
+    </section>
+    <!-- section-2 counter -->
+    <section id="counter">
+        <section class="counter-section">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-md-3 mb-lg-0 mb-md-0 mb-5">
+                        <h2>
+                            <span id="count1"></span>+
+                        </h2>
+                        <p>Saving</p>
+                    </div>
+                    <div class="col-md-3 mb-lg-0 mb-md-0 mb-5">
+                        <h2>
+                            <span id="count2"></span>+
+                        </h2>
+                        <p>Photos</p>
+                    </div>
+                    <div class="col-md-3 mb-lg-0 mb-md-0 mb-5">
+                        <h2>
+                            <span id="count3"></span>+
+                        </h2>
+                        <p>Rockets</p>
+                    </div>
+                    <div class="col-md-3 mb-lg-0 mb-md-0 mb-5">
+                        <h2>
+                            <span id="count4"></span>+
+                        </h2>
+                        <p>Globes</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+
+
+    <!-- section-3 story -->
+
+
+
+    <!-- section-4 explore food -->
+
+
+
+    <!-- section-5 testimonial -->
+
+
+
+    <!-- section-6 faq -->
+
+
+
+    <!-- section-7 book-food -->
+
+
+
+
+
+
+    <!-- JS Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+
+    <!-- Own JS -->
+    <script src="js/main.js"></script>
 
 </body>
 
